[Feat] Agregar script de paypal para su integración

--- a/src/index.html
+++ b/src/index.html
@@ -59,5 +59,7 @@
     <script src="assets/js/vendor/countdown.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
+    <!-- SCRIPT PAYPAL -->
+    <script src="https://www.paypal.com/sdk/js?client-id=ASN9cNwo9Zdu1D9PRorW9SZ4E707kBU8JpQ7h7iFM2tMTYBVczypQrz5Ne18prx4zdvs09bqPgZ_uUU1&vault=true"></script>
   </body>
 </html>
